1.vpc_layer.yaml
---
AWSTemplateFormatVersion: "2010-09-09"
Description: Default VPC stack for the Project

Parameters:
  ProjectName:
    Type: String
    Description: Project Name
  RegionName:
    Type: String
    Description: Region Name
    AllowedValues:
      - seoul
      - saopaulo
  PublicKeyMaterial:
    Type: String
    Description: Key Pair - Public Key Material
  AdminIp:
    Type: AWS::SSM::Parameter::Value<String>
    Description: Admin Public IP Address (ex 100.100.100.100/32)
    Default: AdminIp
  NatInstancePrivateIp:
    Type: String
    Description: Nat Instance Private IP address
    Default: 10.1.1.100
  OpenVpnPrivateIp:
    Type: String
    Description: OpenVPN Private IP address
    Default: 10.1.2.100

Mappings:
  CidrMap:
    ap-northeast-2:
      VpcCidr: 10.1.0.0/16
      PubSn1Cidr: 10.1.1.0/24
      PubSn2Cidr: 10.1.2.0/24
      WebSn3Cidr: 10.1.3.0/24
      WebSn4Cidr: 10.1.4.0/24
    sa-east-1:
      VpcCidr: 10.3.0.0/16
      PubSn1Cidr: 10.3.1.0/24
      PubSn2Cidr: 10.3.2.0/24
      WebSn3Cidr: 10.3.3.0/24
      WebSn4Cidr: 10.3.4.0/24
  AmiMap:
    ap-northeast-2:
      Ami: ami-0cf1ead55e8259a57
    sa-east-1:
      Ami: ami-02040ca09ead0f460
    openvpn:
      Ami: ami-09a093fa2e3bfca5a

Conditions:
  Seoul: !Equals [!Ref "AWS::Region", ap-northeast-2]
  Saopaulo: !Equals [!Ref "AWS::Region", sa-east-1]

Resources:
# VPC & Internet Gateway
  Vpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !FindInMap [CidrMap, !Ref "AWS::Region", VpcCidr]
      EnableDnsHostnames: true
      EnableDnsSupport: true
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${RegionName}-vpc"

  Igw:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${RegionName}-igw"

  IgwAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref Igw
      VpcId: !Ref Vpc

# Ingress Public Subnet & Route Table
  PubSn1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      AvailabilityZone: !Select [0, !GetAZs '']
      CidrBlock: !FindInMap [CidrMap, !Ref "AWS::Region", PubSn1Cidr]
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${RegionName}-pub-sn1"

  PubSn2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      AvailabilityZone: !Select [2, !GetAZs '']
      CidrBlock: !FindInMap [CidrMap, !Ref "AWS::Region", PubSn2Cidr]
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${RegionName}-pub-sn2"

  PubRt12:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${RegionName}-pub-rt12"

  PubRt12Sn1Association:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PubRt12
      SubnetId: !Ref PubSn1

  PubRt12Sn2Association:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PubRt12
      SubnetId: !Ref PubSn2

  PubRt12DefaultRoute:
    Type: AWS::EC2::Route
    DependsOn: IgwAttachment
    Properties:
      RouteTableId: !Ref PubRt12
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref Igw

# Web Private Subnet & Route Table
  WebSn3:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      AvailabilityZone: !Select [0, !GetAZs '']
      CidrBlock: !FindInMap [CidrMap, !Ref "AWS::Region", WebSn3Cidr]
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${RegionName}-web-sn3"

  WebSn4:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      AvailabilityZone: !Select [2, !GetAZs '']
      CidrBlock: !FindInMap [CidrMap, !Ref "AWS::Region", WebSn4Cidr]
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${RegionName}-web-sn4"

  WebRt34:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${RegionName}-web-rt34"

  WebRt34Sn3Association:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref WebRt34
      SubnetId: !Ref WebSn3

  WebRt34Sn4Association:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref WebRt34
      SubnetId: !Ref WebSn4

  WebRt34DefaultRouteNatInstance:
    Type: AWS::EC2::Route
    Condition: Seoul
    DependsOn: NatInstance
    Properties:
      RouteTableId: !Ref WebRt34
      DestinationCidrBlock: 0.0.0.0/0
      InstanceId: !Ref NatInstance

  WebRt34DefaultRouteNatGateway:
    Type: AWS::EC2::Route
    Condition: Saopaulo
    DependsOn: NatGateway
    Properties:
      RouteTableId: !Ref WebRt34
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway

# Key Pair
  KeyPair:
    Type: AWS::EC2::KeyPair
    Properties:
      KeyName: !Sub "${RegionName}-key"
      PublicKeyMaterial: !Ref PublicKeyMaterial

# Nat Instance & Security Group
  NatInstanceSg:
    Type: AWS::EC2::SecurityGroup
    Condition: Seoul
    Properties:
      GroupDescription: !Sub "${AWS::Region} Nat Instance Security Group"
      VpcId: !Ref Vpc
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !FindInMap [CidrMap, !Ref "AWS::Region", PubSn2Cidr]
          Description: Allow TCP 22 for Admin SSH access
        - IpProtocol: -1
          CidrIp: !FindInMap [CidrMap, !Ref "AWS::Region", VpcCidr]
          Description: Allow all traffic for NAT
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${RegionName}-nat-instance-sg"

  NatInstance:
    Type: AWS::EC2::Instance
    Condition: Seoul
    Properties:
      ImageId: !FindInMap [AmiMap, !Ref "AWS::Region", Ami]
      InstanceType: t3.micro
      KeyName: !Ref KeyPair
      NetworkInterfaces:
        - AssociatePublicIpAddress: true
          DeviceIndex: 0
          PrivateIpAddress: !Ref NatInstancePrivateIp
          GroupSet: 
            - !Ref NatInstanceSg
          SubnetId: !Ref PubSn1
      SourceDestCheck: false
      Tags:
        - Key : Name
          Value : !Sub "${ProjectName}-${RegionName}-nat-instance"
      UserData:
        Fn::Base64: |
          #!/bin/bash
          echo "net.ipv4.ip_forward=1" >> /etc/sysctl.conf
          sysctl -p /etc/sysctl.conf
          yum install -y iptables-services
          systemctl start iptables
          systemctl enable iptables
          iptables -F
          iptables -t nat -A POSTROUTING -o eth0 -j MASQUERADE
          service iptables save

# NAT Gateway & EIP
  NatGatewayEip:
    Type: AWS::EC2::EIP
    Condition: Saopaulo
    Properties:
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${RegionName}-eip-nat"

  NatGateway:
    Type: AWS::EC2::NatGateway
    Condition: Saopaulo
    DependsOn: NatGatewayEip
    Properties:
      AllocationId: !GetAtt NatGatewayEip.AllocationId
      SubnetId: !Ref PubSn1
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${RegionName}-nat-gw"

# OpenVPN & Security Group
  OpenvpnSg:
    Type: AWS::EC2::SecurityGroup
    Condition: Seoul
    Properties:
      GroupDescription: !Sub "${AWS::Region} OpenVPN Security Group"
      VpcId: !Ref Vpc
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref AdminIp
          Description: Allow TCP 22 for Admin SSH access
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
          Description: Allow TCP 443 for Admin HTTPS access
        - IpProtocol: tcp
          FromPort: 943
          ToPort: 943
          CidrIp: 0.0.0.0/0
          Description: Allow TCP 943 for Admin web management
        - IpProtocol: tcp
          FromPort: 945
          ToPort: 945
          CidrIp: 0.0.0.0/0
          Description: Allow TCP 945 for internal communication
        - IpProtocol: udp
          FromPort: 1194
          ToPort: 1194
          CidrIp: 0.0.0.0/0
          Description: Allow UDP 1194 for VPN data
        - IpProtocol: icmp
          FromPort: -1
          ToPort: -1
          CidrIp: 10.0.0.0/8
          Description: Allow ICMP for internal communication test
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${RegionName}-openvpn-sg"

  Openvpn:
    Type: AWS::EC2::Instance
    Condition: Seoul
    Properties:
      ImageId: !FindInMap [AmiMap, openvpn, Ami]
      InstanceType: t3.micro
      KeyName: !Ref KeyPair
      NetworkInterfaces:
        - AssociatePublicIpAddress: true
          PrivateIpAddress: !Ref OpenVpnPrivateIp
          DeviceIndex: 0
          GroupSet: 
            - !Ref OpenvpnSg
          SubnetId: !Ref PubSn2
      Tags:
        - Key : Name
          Value : !Sub "${ProjectName}-${RegionName}-openvpn"

# OutPuts
Outputs:
  VpcId:
    Description: The VPC ID
    Value: !Ref Vpc
    Export:
      Name: VpcId
  PubSn1Id:
    Description: The Public Subnet1 ID
    Value: !Ref PubSn1
    Export:
      Name: PubSn1Id
  PubSn2Id:
    Description: The Public Subnet2 ID
    Value: !Ref PubSn2
    Export:
      Name: PubSn2Id
  WebSn3Id:
    Description: The Private Subnet3 ID
    Value: !Ref WebSn3
    Export:
      Name: WebSn3Id
  WebSn4Id:
    Description: The Private Subnet4 ID
    Value: !Ref WebSn4
    Export:
      Name: WebSn4Id
...
